2A/05_Projet_GL/src/test/deca/context/invalid/complet/08_duplication_decl_methode.deca
// Description :
//     duplication du Decl Methode 
// Resultats :
//    ligne 14 : get deja déclarée
// Historique :
//  cree le 16/01/2024

class A {
    int get()
    {

    }

    boolean get()
    {
        
    }
}
